<package format="2">
  <name>replanning</name>
  <version>0.0.0</version>
  <description>The replanning package</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ruckig</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ruckig</exec_depend>

  <build_depend>shield_planner_msgs</build_depend>
  <exec_depend>shield_planner_msgs</exec_depend>
  <build_depend>sbpl_collision_checking</build_depend>
  <build_depend>shield_planner_msgs</build_depend>
  <build_depend>shield_planner</build_depend>
  <exec_depend>shield_planner</exec_depend>

  <build_depend>actionlib</build_depend>
  <exec_depend>actionlib</exec_depend>

  <build_depend>control_msgs</build_depend>
  <exec_depend>control_msgs</exec_depend>
</package>
